--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
+          echo "COMMIT_HASH=$COMMIT_HASH" >> "$GITHUB_ENV"
           dotnet build --no-restore
-          echo "{commit_hash}={COMMIT_HASH}" >> "$GITHUB_ENV"
 
       - name: Publish Artifact
         id: publish_artifact
