--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,7 @@ jobs:
         id: publish_artifact
         uses: actions/upload-artifact@v2
         with:
-          name: SoulsFormats-kotn3l-$commit_hash
+          name: SoulsFormats-kotn3l-$COMMIT_HASH
           path: |
             **/bin/**/*.dll
             **/bin/**/*.pdb
