--- a/SoulsFormats/SoulsFormats.csproj
+++ b/SoulsFormats/SoulsFormats.csproj
@@ -18,12 +18,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle.Cryptography" Version="2.3.0" />
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.4.0" />
     <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
-    <PackageReference Include="DotNext.IO" Version="5.4.0" />
-    <PackageReference Include="DotNext.Unsafe" Version="5.3.0" />
+    <PackageReference Include="DotNext.IO" Version="5.7.0" />
+    <PackageReference Include="DotNext.Unsafe" Version="5.7.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
 	<PackageReference Include="System.ValueTuple" Version="4.5.0" />
+	<PackageReference Include="ZstdSharp.Port" Version="0.8.1" />
   </ItemGroup>
 
   <ItemGroup>
