--- a/SoulsFormats/SoulsFormats.csproj
+++ b/SoulsFormats/SoulsFormats.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>12</LangVersion>
     <Copyright>Copyright © Joseph Anderson 2019</Copyright>
